# Yathra_ROS2_Control

./: README.md
install/: local_setup.sh  setup.sh
install/yathra/lib/yathra/: dummy_depth  yathra_serial
install/yathra/share/ament_index/resource_index/package_run_dependencies/: yathra
install/yathra/share/ament_index/resource_index/parent_prefix_path/: yathra
install/yathra/share/yathra/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/yathra/share/yathra/cmake/: yathraConfig-version.cmake  yathraConfig.cmake
install/yathra/share/yathra/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/yathra/: CMakeLists.txt  package.xml
src/yathra/src/: dummy_depth.cpp  yathra_serial.cpp
